[package]
name = "async_lib_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A common api set for async runtimes"
keywords = ["async"]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
async-executor = "1.6.0"
futures = "0.3.29"
futures-io = "0.3.29"
pin-project = "1.1.3"
pin-project-lite = "0.2.13"
tokio = "1.35.1"

[features]
not_test = ["tokio/rt"]
default = ["not_test"]
tokio_rt = ["tokio/rt"]
runtime = []
file_ops = []
io = []